<resources>
    <string name="app_name">SpotBoy</string>
    <string name="app_name_offline">SpotBoy/L</string>
    <string name="activity_about_title">About</string>
    <string name="action_create">create</string>
    <string name="activity_new_title">New Spot</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="marker">marker</string>

    <string name="credits">created by Patrick Schwarzenecker</string>
    <string name="creation_time">2016</string>
    <string name="libraries">libraries</string>
    <string name="default_content_description">bla</string>
    <string name="gps_not_ready_message">gps not ready</string>
    <string name="waiting_for_gps_signal_message">waiting for gps data</string>
    <string name="new_spot_default_cat">STREET</string>
    <string name="category">category</string>
    <string name="xxx">xxxxxx</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="notes">notes</string>
    <string name="error_message_img">image error</string>
    <string name="spot_created_message">spot created</string>
    <string name="more">more</string>
    <string name="new_marker_alert_message">set new marker?</string>
    <string name="activity_hub_title">Hub</string>
    <string name="activity_info_title">SpotInfo</string>
    <string name="new_cat_alert_title">set new type</string>
    <string name="new_notes_dialog_title">set new notes</string>
    <string name="action_delete">delete</string>
    <string name="spot_deleted_message">spot deleted</string>

    <string name="action_settings">Settings</string>
    <string name="signed_in_fmt">signed</string>
    <string name="loading">loading</string>
    <string name="signed_out">signed out</string>
    <string name="google_login_label">Login</string>
    <string name="offline_button_text">SpotBoy Offline Mode</string>
    <string name="content_description">content_description</string>
    <string name="default_user_name">:)</string>
    <string name="login_default_status">---</string>
    <string name="status_label">status</string>
    <string name="user_name_label">name</string>
    <string name="sign_out_button_label">Sign out</string>
    <string name="login_title">Login</string>
    <string name="action_hub">HUB</string>
    <string name="action_new">NEW</string>
    <string name="action_about">About</string>
    <string name="action_kml">KML</string>
    <string name="use_cached_gps_question">use cached gps data?</string>
    <string name="local_db_error_message">local database error</string>
    <string name="connection_error_message">connection error</string>
    <string name="refreshing">refreshing</string>
    <string name="activate_gps_dialog_question">gps is off. turn it on?</string>
    <string name="remote_db_error_message">database query error</string>
    <string name="no_spot_found_message">no spot found</string>
    <string name="creating_db_entry_message">creating db entry</string>
    <string name="uploading">uploading...</string>
    <string name="image_upload_started">Image upload started</string>
    <string name="take_a_photo_message">take a photo!</string>
    <string name="sending">sending</string>
    <string name="new_spot_information">new spot information</string>
    <string name="db_error">database error</string>
    <string name="activity_kml_title">KML</string>
    <string name="kml_load_button">load KML from file</string>
    <string name="kml_remove_button">remove current KML</string>
    <string name="kml_file_dialog_title">choose kml</string>
    <string name="no_file_found_message">no file found</string>
    <string name="remove_current_kml_overlay">remove current kml</string>
    <string name="creating_spot_progressTitle">creating spot</string>
    <string name="images_left_message">image(s) left</string>
    <string name="please_wait_message">please wait...</string>
</resources>
